final of final edit

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </div>
     </footer>
 </div>
+<!-- 스크립트 영역 삽입영역 (보통 head 영역에도 추가함) -->
 <script src="/js/slideshow.js"></script>
 </body>
 </html>
